Small update to the Makefile. Now install only copies to destination directory if source directory files are newer.

--- a/include/Makefile
+++ b/include/Makefile
@@ -2,7 +2,9 @@ includedir=$(prefix)/include
 
 build: 
 
-install:
+install: $(includedir)/amjMemory.h
+
+$(includedir)/amjMemory.h: amjMemory.h
 	cp amjMemory.h $(includedir)
 
 uninstall:
